# SWAPK---Audio-Fx-Pipeline

./: CMakeLists.txt  README.md  arkitektur.puml  main.cpp
cmake/: compile_options.cmake
include/: ComponentTraits.h  DebugResource.h  Distortion.h  InputFile.h  Literals.h  LowPass.h  OutputFile.h  Parallel.h  PassThrough.h  Pipeline.h  SoundFile.h  StringLitteral.h  Tremolo.h  TypeLists.h
